--- a/.github/runners/dockerfile
+++ b/.github/runners/dockerfile
@@ -26,15 +26,24 @@ RUN apt-get update
 RUN apt-get install -y docker-ce-cli
 
 # Install the GitHub Actions Runner 
-RUN apt-get update && apt-get install -y sudo jq packer make
+RUN apt-get update && apt-get install -y --no-install-recommends sudo jq packer make locales 
+
+RUN localedef -i en_US -f UTF-8 en_US.UTF-8
+
+RUN useradd -m linuxbrew && \
+  usermod -aG sudo linuxbrew && \
+  echo "%sudo ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
 RUN useradd -m github && \
   usermod -aG sudo github && \
   echo "%sudo ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
-USER github
-WORKDIR /actions-runner
+USER linuxbrew
 RUN NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+ENV PATH="home/linuxbrew/.linuxbrew/bin:${PATH}"
+
+USER github
+ENV PATH="home/linuxbrew/.linuxbrew/bin:${PATH}"
 
 RUN curl -Ls https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz | tar xz \
   && sudo ./bin/installdependencies.sh
