--- a/.github/runners/dockerfile
+++ b/.github/runners/dockerfile
@@ -2,15 +2,15 @@ FROM debian:bookworm-slim
 
 ARG RUNNER_VERSION="2.302.1"
 
-ENV GITHUB_PERSONAL_TOKEN ""
-ENV GITHUB_OWNER ""
-ENV GITHUB_REPOSITORY ""
+ENV GITHUB_PERSONAL_TOKEN=""
+ENV GITHUB_OWNER=""
+ENV GITHUB_REPOSITORY=""
 
 # Install Docker -> https://docs.docker.com/engine/install/debian/
 
 # Add Docker's official GPG key:
 RUN apt-get update && \
-    apt-get install -y ca-certificates curl gnupg
+    apt-get install -y ca-certificates curl gnupg git
 RUN install -m 0755 -d /etc/apt/keyrings
 RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 RUN chmod a+r /etc/apt/keyrings/docker.gpg
@@ -26,7 +26,7 @@ RUN apt-get update
 RUN apt-get install -y docker-ce-cli
 
 # Install the GitHub Actions Runner 
-RUN apt-get update && apt-get install -y --no-install-recommends sudo jq packer make locales 
+RUN apt-get update && apt-get install -y --no-install-recommends sudo jq make locales 
 
 RUN localedef -i en_US -f UTF-8 en_US.UTF-8
 
@@ -40,18 +40,27 @@ RUN useradd -m github && \
 
 USER linuxbrew
 RUN NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-ENV PATH="home/linuxbrew/.linuxbrew/bin:${PATH}"
+USER root
+RUN chown -R github:github /home/linuxbrew/.linuxbrew
+ENV PATH="/home/linuxbrew/.linuxbrew/bin:${PATH}"
+
+#working folder for the runner 
+USER root
+RUN sudo mkdir /work /actions-runner && chown -R github: /work /actions-runner && ls -alh /actions-runner
 
 USER github
-ENV PATH="home/linuxbrew/.linuxbrew/bin:${PATH}"
+RUN brew tap hashicorp/tap && brew install hashicorp/tap/packer jq yq 
 
-RUN curl -Ls https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz | tar xz \
-  && sudo ./bin/installdependencies.sh
+WORKDIR /actions-runner
+USER github
+ENV PATH="/home/linuxbrew/.linuxbrew/bin:${PATH}"
+RUN set -x && echo "$(whoami)" && echo "Installing runner to ${PWD}" && \
+  curl -Ls https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz | tar xz && \
+  sudo ./bin/installdependencies.sh
+
 
 COPY --chown=github:github entrypoint.sh  /actions-runner/entrypoint.sh
 RUN sudo chmod u+x /actions-runner/entrypoint.sh
 
-#working folder for the runner 
-RUN sudo mkdir /work 
 
 ENTRYPOINT ["/actions-runner/entrypoint.sh"]
