--- a/.github/runners/dockerfile
+++ b/.github/runners/dockerfile
@@ -49,7 +49,7 @@ USER root
 RUN sudo mkdir /work /actions-runner && chown -R github: /work /actions-runner && ls -alh /actions-runner
 
 USER github
-RUN brew tap hashicorp/tap && brew install hashicorp/tap/packer jq yq xmlstarlet coreutils
+RUN brew tap hashicorp/tap && brew install hashicorp/tap/packer yq xmlstarlet coreutils
 
 USER github
 RUN which packer && packer version
