more vars testing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Write Appliance.yaml
       run: |
-        cat <<EOF
+        cat <<'EOF'
           vars:
             vsphere_server: ${{ vars.CRUCIBLE_VSPHERE_SERVER }}
         EOF > appliance.yaml
