--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
       run: which packer && packer version
 
     - name: Write Appliance.yaml
-      run: |
+      run: |-
         APPLIANCE_YAML=$(cat << EOF
         vars:
           VSPHERE_SERVER: ${{ vars.CRUCIBLE_VSPHERE_SERVER }}
