--- a/.github/runners/dockerfile
+++ b/.github/runners/dockerfile
@@ -26,7 +26,7 @@ RUN apt-get update
 RUN apt-get install -y docker-ce-cli
 
 # Install the GitHub Actions Runner 
-RUN apt-get update && apt-get install -y --no-install-recommends sudo jq make locales gcc
+RUN apt-get update && apt-get install -y --no-install-recommends sudo jq make locales gcc xorriso
 
 RUN localedef -i en_US -f UTF-8 en_US.UTF-8
 
