--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Homebrew Cache
       uses: tecolicom/actions-use-homebrew-tools@v1
       with:
-        tools: yq
+        tools: ""
         key: ${{ runner.os }}-homebrew-cache
         cache: yes
         verbose: yes
@@ -69,13 +69,13 @@ jobs:
       env:
         GITHUB_PULL_REQUEST: ${{ github.event.number }}
       with:
-        timeout_minutes: 60
+        timeout_minutes: 120
         max_attempts: 5
         command: make build
 
-    # - name: Get build_name from OVF file
-    #   run: echo "build_name=$(sh -c "find . -name '*.ovf' | xargs basename -s '.ovf'")" >> $GITHUB_ENV
-    #   working-directory: ./output-virtualbox
+    - name: Get build_name from OVF file
+      run: echo "build_name=$(sh -c "find . -name '*.ovf' | xargs basename -s '.ovf'")" >> $GITHUB_ENV
+      working-directory: ./dist/output
 
     # - name: Improve OVF VMware compatibility
     #   run: |
@@ -100,15 +100,15 @@ jobs:
     #   run: openssl sha256 *.ovf *.vmdk > ${{ env.build_name }}.mf
     #   working-directory: ./output-virtualbox
 
-    # - name: Package OVA image
-    #   run: tar -cvf ../${{ env.build_name }}.ova --format=ustar ${{ env.build_name }}{.ovf,-disk001.vmdk,.mf}
-    #   working-directory: ./output-virtualbox
+    - name: Package OVA image
+      run: tar -cvf ../${{ env.build_name }}.ova --format=ustar ${{ env.build_name }}{.ovf,-disk001.vmdk,.mf}
+      working-directory: ./dist/output
 
-    # - name: Upload OVA to Azure Storage
-    #   run: |
-    #     az cloud set --name AzureUSGovernment
-    #     az storage blob upload --file ${{ env.build_name }}.ova \
-    #                            --container-name ova \
-    #                            --name appliance/${{ env.build_name }}.ova \
-    #                            --connection-string "${{ secrets.AZ_STORAGE_CS }}" \
-    #                            --no-progress
+    - name: Upload OVA to Azure Storage
+      run: |
+        az cloud set --name AzureUSGovernment
+        az storage blob upload --file ${{ env.build_name }}.ova \
+                               --container-name crucible-appliance \
+                               --name appliance/${{ env.build_name }}.ova \
+                               --connection-string "${{ secrets.AZ_STORAGE_CS }}" \
+                               --no-progress
