update directory for OVA

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,7 +101,7 @@ jobs:
     #   working-directory: ./output-virtualbox
 
     - name: Package OVA image
-      run: tar -cvf ../${{ env.build_name }}.ova --format=ustar ${{ env.build_name }}{.ovf,-disk001.vmdk,.mf}
+      run: tar -cvf ${{ env.build_name }}.ova --format=ustar ${{ env.build_name }}{.ovf,-disk001.vmdk,.mf}
       working-directory: ./dist/output
 
     - name: Upload OVA to Azure Storage
