--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,9 @@ jobs:
     runs-on: self-hosted
     environment: House
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      with: 
+        path: "."
 
     - name: Packer cache
       uses: actions/cache@v3
