--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with: 
-        path: "."
+        path: "crucible-appliance"
 
     - name: Packer cache
       uses: actions/cache@v3
