--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,12 +18,14 @@ jobs:
     steps:
     - name: Echo GITHUB_WORKSPACE
       run: |
-        echo "$GITHUB_WORKSPACE"
+        echo $GITHUB_WORKSPACE
         echo ${{ github.workspace }}
       
     
     - name: Checkout Code
       uses: actions/checkout@v3
+      with:
+        path: /work/crucible-appliance
       
     - name: Packer Version
       run: which packer && packer version
