--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,12 +13,15 @@ jobs:
   build:
     runs-on: self-hosted
     environment: House
-    defaults:
-      run:
-        working-directory: /work
+    
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
+      with:
+        path: "/work"
+        repository: 'crucible-appliance'
+        
+
 
     - name: Packer Version
       run: which packer && packer version
