--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,10 +19,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: "/work"
-        repository: 'crucible-appliance'
+        repository: 'sei-noconnor/crucible-appliance'
         
-
-
     - name: Packer Version
       run: which packer && packer version
 
