--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: self-hosted
+    environment: House
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
