typo container_name

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
       uses: bacongobbler/azure-blob-storage-upload@main
       with:
         source_dir: ./dist/output
-        container_name: www
+        container_name: crucible-appliance
         connection_string: ${{ secrets.AZ_STORAGE_CS }}
         extra_args: '--pattern *.ova'
         # WARNING: this will overwrite existing blobs in your blob storage
