try with data key instead of stringData

--- a/argocd/apps/prod-k8s/crucible/fortress-tls.secret.yaml
+++ b/argocd/apps/prod-k8s/crucible/fortress-tls.secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: fortress-tls
 type: kubernetes.io/tls
-stringData:
+data:
   tls.crt: |
     <path:fortress-prod/data/shared#fortress-tls-fullchain>
   tls.key: |
