update fortress tls to be in its own directory

--- a/argocd/apps/prod-argo/apps/fortress-tls-app.yaml
+++ b/argocd/apps/prod-argo/apps/fortress-tls-app.yaml
@@ -11,11 +11,10 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: crucible
+    path: tls
     repoURL: https://fortress.sei.cmu.edu/gitea/fortress-manifests/fortress-prod-k8s.git
     targetRevision: HEAD
     directory:
-      include: 'fortress-tls.secret.yaml'
       recurse: false
     plugin:
       name: avp
