enable topomojo ui ingress

--- a/argocd/apps/prod-k8s/crucible/topomojo.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/topomojo.values.yaml
@@ -151,7 +151,7 @@ topomojo-ui:
     port: 80
 
   ingress:
-    enabled: false
+    enabled: true
     annotations: 
       kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
       nginx.ingress.kubernetes.io/proxy-body-size: 6g
