--- a/argocd/apps/mkdocs/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/apps/mkdocs/kustomize/overlays/appliance/kustomization.yaml
@@ -2,6 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
+patches:
+  - target: 
+      group: kustomize.config.k8s.io
+      version: v1beta1
+      kind: Kustomization
+      name: mkdocs-material
+    path: repo-patch.yaml
 
   
 
