--- a/argocd/apps/topomojo/kustomize/base/topomojo-pvc.yaml
+++ b/argocd/apps/topomojo/kustomize/base/topomojo-pvc.yaml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: topomojo-pvc
+  name: topomojo-iso-pvc
 spec:
-  storageClassName: "local-path"
+  
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 50Gi
