--- a/argocd/apps/topomojo/kustomize/base/topomojo-pv.yaml
+++ b/argocd/apps/topomojo/kustomize/base/topomojo-pv.yaml
@@ -3,12 +3,13 @@ kind: PersistentVolume
 metadata:
   name: topomojo-iso-pv
 spec:
+  storageClassName: manual
   capacity:
     storage: 50Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    path: "/volume1/VMWare/topomojo/iso"
-    server: "192.168.1.253"
+    path: /volume1/VMWare/topomojo/iso
+    server: 192.168.1.253
     readOnly: false
