--- a/argocd/apps/topomojo/kustomize/base/topomojo-pvc.yaml
+++ b/argocd/apps/topomojo/kustomize/base/topomojo-pvc.yaml
@@ -4,9 +4,9 @@ apiVersion: v1
 metadata:
   name: topomojo-iso-pvc
 spec:
-  
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 50Gi
+  storageClassName: manual
