--- a/argocd/apps/topomojo/kustomize/base/topomojo-pv.yaml
+++ b/argocd/apps/topomojo/kustomize/base/topomojo-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: topomojo-iso-pv
+  name: topomojo-pv
 spec:
   storageClassName: manual
   capacity:
@@ -10,6 +10,6 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    path: /volume1/VMWare/topomojo/iso
+    path: /volume1/VMWare/topomojo
     server: 192.168.1.253
     readOnly: false
