--- a/packer/vars.auto.pkrvars.hcl.example
+++ b/packer/vars.auto.pkrvars.hcl.example
@@ -4,7 +4,7 @@ vsphere_password = "pass"
 vsphere_template = "template-vm-name"
 datacenter = "DC"
 cluster = "DC0"
-host = "DC0_H0"
+host = "esx.example.com"
 datastore = "LocalDS_0"
 network_name = "VM Network"
 ssh_username = "crucible"
