--- a/argocd/apps/topomojo/kustomize/base/topomojo-pv.yaml
+++ b/argocd/apps/topomojo/kustomize/base/topomojo-pv.yaml
@@ -10,6 +10,6 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    path: 
-    server: 
+    path: ""
+    server: ""
     readOnly: false
