--- a/argocd/apps/topomojo/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/apps/topomojo/kustomize/overlays/appliance/kustomization.yaml
@@ -1,5 +1,40 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: topomojo
+
+configMapGenerator:
+- name: topomojo-nfs
+  literals:
+  - nfs_path=/volume1/VMWare/topomojo
+  - nfs_server=192.168.1.253
+  
+generatorOptions:
+  disableNameSuffixHash: true
+
 resources:
 - ../../base
+
+replacements:
+- source:
+    kind: ConfigMap
+    name: topomojo-nfs
+    namespace: topomojo
+    fieldPath: data.nfs_server
+  targets:
+  - select:
+      kind: PersistentVolume
+      name: topomojo-pv
+    fieldPaths: 
+    - spec.nfs.server
+
+- source:
+    kind: ConfigMap
+    name: topomojo-nfs
+    namespace: topomojo
+    fieldPath: data.nfs_path
+  targets:
+  - select:
+      kind: PersistentVolume
+      name: topomojo-pv
+    fieldPaths: 
+    - spec.nfs.path
